--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,20 +1,19 @@
 FROM python:3.9
 
-# Set working directory
 WORKDIR /app
 
-# Copy only requirements first to cache dependencies
-COPY requirements.txt ./
+# Install system dependencies
+RUN apt-get update && apt-get install -y build-essential
 
-# Install Rasa and other requirements
+# Install Rasa
 RUN pip install --upgrade pip
-RUN pip install rasa==3.6.10
+RUN pip install rasa==3.6.10 rasa-sdk==3.6.1 pandas openpyxl
 
-# Copy everything into the container
+# Copy your project files
 COPY . .
 
-# Expose Rasa server port
+# Expose port
 EXPOSE 5005
 
-# Default command
-CMD ["rasa", "run", "--enable-api", "--port", "5005", "--cors", "*"]
+# Run the Rasa server
+CMD ["rasa", "run", "--enable-api", "--cors", "*", "--port", "5005"]
