--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,10 +1,10 @@
-# Use an official Python image
-FROM python:3.10
+# Use official Python image
+FROM python:3.10-slim
 
 # Set working directory
 WORKDIR /app
 
-# Copy all project files
+# Copy project files
 COPY . .
 
 # Install system dependencies
@@ -13,12 +13,12 @@ RUN apt-get update && apt-get install -y \
     git \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Rasa
+# Upgrade pip and install Rasa
 RUN pip install --upgrade pip
 RUN pip install rasa==3.6.10
 
-# Expose port 5005 for Rasa
+# Expose the port Rasa will run on
 EXPOSE 5005
 
-# Start Rasa server
+# Start Rasa when the container starts
 CMD ["rasa", "run", "--enable-api", "--cors", "*", "--port", "5005", "--debug"]
