--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,24 +1,25 @@
-# Use official Python image
+# Use the official Python base image
 FROM python:3.10-slim
 
-# Set working directory
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Set work directory
 WORKDIR /app
 
-# Copy project files
-COPY . .
-
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    git \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y build-essential
 
-# Upgrade pip and install Rasa
+# Copy files to the container
+COPY . /app/
+
+# Install Rasa and other dependencies
 RUN pip install --upgrade pip
 RUN pip install rasa==3.6.10
 
 # Expose the port Rasa will run on
 EXPOSE 5005
 
-# Start Rasa when the container starts
-CMD ["rasa", "run", "--enable-api", "--cors", "*", "--port", "5005", "--debug"]
+# Run the Rasa server
+CMD ["rasa", "run", "--enable-api", "--cors", "*", "--port", "5005"]
